// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding custom config 1`] = `
{
  "Parameters": {
    "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfArtifactHash5E438705": {
      "Description": "Artifact hash for asset "723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9df"",
      "Type": "String",
    },
    "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3Bucket9140533C": {
      "Description": "S3 bucket for asset "723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9df"",
      "Type": "String",
    },
    "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3VersionKeyDB69FFE8": {
      "Description": "S3 key for asset version "723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9df"",
      "Type": "String",
    },
    "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dArtifactHash02974AEF": {
      "Description": "Artifact hash for asset "ce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927d"",
      "Type": "String",
    },
    "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3BucketB5E70470": {
      "Description": "S3 bucket for asset "ce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927d"",
      "Type": "String",
    },
    "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3VersionKeyBCB73DFC": {
      "Description": "S3 key for asset version "ce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927d"",
      "Type": "String",
    },
  },
  "Resources": {
    "TestConfigDFE7B72C": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3BucketB5E70470",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3VersionKeyBCB73DFC",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3VersionKeyBCB73DFC",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "TestConfigPythonLibLayer672F8799": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3Bucket9140533C",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3VersionKeyDB69FFE8",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3VersionKeyDB69FFE8",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
}
`;

exports[`visting node lambda runtimes and adding aspects 1`] = `
{
  "Parameters": {
    "AssetParameters4a59c8a70b9ad2aa868d3bf49a6e461f1d765ed82c6afb8ddae3fe77cfb7f282ArtifactHash3DD25CB8": {
      "Description": "Artifact hash for asset "4a59c8a70b9ad2aa868d3bf49a6e461f1d765ed82c6afb8ddae3fe77cfb7f282"",
      "Type": "String",
    },
    "AssetParameters4a59c8a70b9ad2aa868d3bf49a6e461f1d765ed82c6afb8ddae3fe77cfb7f282S3Bucket5CDD4D6D": {
      "Description": "S3 bucket for asset "4a59c8a70b9ad2aa868d3bf49a6e461f1d765ed82c6afb8ddae3fe77cfb7f282"",
      "Type": "String",
    },
    "AssetParameters4a59c8a70b9ad2aa868d3bf49a6e461f1d765ed82c6afb8ddae3fe77cfb7f282S3VersionKey7D2EB396": {
      "Description": "S3 key for asset version "4a59c8a70b9ad2aa868d3bf49a6e461f1d765ed82c6afb8ddae3fe77cfb7f282"",
      "Type": "String",
    },
    "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfArtifactHash5E438705": {
      "Description": "Artifact hash for asset "723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9df"",
      "Type": "String",
    },
    "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3Bucket9140533C": {
      "Description": "S3 bucket for asset "723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9df"",
      "Type": "String",
    },
    "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3VersionKeyDB69FFE8": {
      "Description": "S3 key for asset version "723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9df"",
      "Type": "String",
    },
    "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dArtifactHash02974AEF": {
      "Description": "Artifact hash for asset "ce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927d"",
      "Type": "String",
    },
    "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3BucketB5E70470": {
      "Description": "S3 bucket for asset "ce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927d"",
      "Type": "String",
    },
    "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3VersionKeyBCB73DFC": {
      "Description": "S3 key for asset version "ce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927d"",
      "Type": "String",
    },
  },
  "Resources": {
    "testConfigWithNodeDDA76C99": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3BucketB5E70470",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3VersionKeyBCB73DFC",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3VersionKeyBCB73DFC",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3Bucket9140533C",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3VersionKeyDB69FFE8",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3VersionKeyDB69FFE8",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": {
      "DependsOn": [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParameters4a59c8a70b9ad2aa868d3bf49a6e461f1d765ed82c6afb8ddae3fe77cfb7f282S3Bucket5CDD4D6D",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters4a59c8a70b9ad2aa868d3bf49a6e461f1d765ed82c6afb8ddae3fe77cfb7f282S3VersionKey7D2EB396",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters4a59c8a70b9ad2aa868d3bf49a6e461f1d765ed82c6afb8ddae3fe77cfb7f282S3VersionKey7D2EB396",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": {
          "Variables": {
            "AWS_SDK_USER_AGENT": "{ "customUserAgent": "AwsSolution/undefined/undefined" }",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "testConfigWithNodeDDA76C99",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`visting node python runtimes and adding aspects 1`] = `
{
  "Parameters": {
    "AssetParameters2ed37f97a3146526f373779e1a9a1c1c248ec377238df898dcf39a858cae413aArtifactHash62E0F7B2": {
      "Description": "Artifact hash for asset "2ed37f97a3146526f373779e1a9a1c1c248ec377238df898dcf39a858cae413a"",
      "Type": "String",
    },
    "AssetParameters2ed37f97a3146526f373779e1a9a1c1c248ec377238df898dcf39a858cae413aS3BucketBD4670E9": {
      "Description": "S3 bucket for asset "2ed37f97a3146526f373779e1a9a1c1c248ec377238df898dcf39a858cae413a"",
      "Type": "String",
    },
    "AssetParameters2ed37f97a3146526f373779e1a9a1c1c248ec377238df898dcf39a858cae413aS3VersionKeyCFF6143D": {
      "Description": "S3 key for asset version "2ed37f97a3146526f373779e1a9a1c1c248ec377238df898dcf39a858cae413a"",
      "Type": "String",
    },
    "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfArtifactHash5E438705": {
      "Description": "Artifact hash for asset "723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9df"",
      "Type": "String",
    },
    "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3Bucket9140533C": {
      "Description": "S3 bucket for asset "723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9df"",
      "Type": "String",
    },
    "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3VersionKeyDB69FFE8": {
      "Description": "S3 key for asset version "723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9df"",
      "Type": "String",
    },
    "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dArtifactHash02974AEF": {
      "Description": "Artifact hash for asset "ce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927d"",
      "Type": "String",
    },
    "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3BucketB5E70470": {
      "Description": "S3 bucket for asset "ce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927d"",
      "Type": "String",
    },
    "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3VersionKeyBCB73DFC": {
      "Description": "S3 key for asset version "ce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927d"",
      "Type": "String",
    },
  },
  "Resources": {
    "testConfigWithNodeDDA76C99": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3BucketB5E70470",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3VersionKeyBCB73DFC",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersce7f2d3fefcbf0321285da153247d4c8843ef283b59286f5e91aaaf730a3927dS3VersionKeyBCB73DFC",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3Bucket9140533C",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3VersionKeyDB69FFE8",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters723b70341f6709db31f1d7897289b35088326c26fd8281de9910b714701ef9dfS3VersionKeyDB69FFE8",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": {
      "DependsOn": [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParameters2ed37f97a3146526f373779e1a9a1c1c248ec377238df898dcf39a858cae413aS3BucketBD4670E9",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters2ed37f97a3146526f373779e1a9a1c1c248ec377238df898dcf39a858cae413aS3VersionKeyCFF6143D",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters2ed37f97a3146526f373779e1a9a1c1c248ec377238df898dcf39a858cae413aS3VersionKeyCFF6143D",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": {
          "Variables": {
            "AWS_SDK_USER_AGENT": "{ "user_agent_extra": "AwsSolution/undefined/undefined" }",
          },
        },
        "Handler": "handler",
        "Layers": [
          {
            "Ref": "testConfigWithNodePythonLibLayer75C81C17",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
